--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,8 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/EPAMbook
+spring.datasource.url=jdbc:mysql://localhost:3306/epambook
 spring.datasource.username=root
 spring.datasource.password=hybris
 spring.datasource.driverClassName=com.mysql.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
+server.contextPath=/
+server.port=8080
